@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>evrete</artifactId>
@@ -66,33 +67,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>with-security-manager</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/*SecurityTests.java</include>
-                            </includes>
-                            <argLine>
-                                -Djava.security.manager
-                                -Djava.security.policy==${project.basedir}/src/test/resources/all-permissions.policy
-                            </argLine>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <configuration>
-                            <excludes>
-                                <exclude>**/*SecurityTests.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
@@ -107,7 +81,7 @@
                         </goals>
                         <configuration>
                             <archive>
-                                <manifestEntries />
+                                <manifestEntries/>
                                 <addMavenDescriptor>false</addMavenDescriptor>
                             </archive>
 
@@ -127,7 +101,7 @@
                         </goals>
                         <configuration>
                             <archive>
-                                <manifestEntries />
+                                <manifestEntries/>
                                 <addMavenDescriptor>false</addMavenDescriptor>
                             </archive>
 
